tests/paczka2/big_fuzzy/45630084.err
Error in line 12: C8Sr9Dxkbx8 S186 45,7
Error in line 21: S441 S441 83,8
Error in line 25: 3EIjIBt6C S186 3,0
Error in line 31: cqBL S441 59,6
Error in line 23: S441 S946 15,7
Error in line 47: cqBL S94e 13,5
Error in line 45: cqBL S946 6,5
Error in line 56: gzJ16HAvbL S186 105,61
Error in line 50: gzJ16HAvbL S186 71,5
Error in line 62: gzJ16HAvbL A81 40,5
Error in line 64: S441 S186 36,9
Error in line 61: 3EIjIBt6C S186 66,3
Error in line 67: S441 S441 24,0
Error in line 75: S441 S441 79,3
Error in line 78: OmJemA S186 50,2
Error in line 87: S441 A81 34,3
Error in line 86: OmJemA S441 60,2
Error in line 92: S441 A81 205,2
Error in line 91: OmJemA S186 63,0
Error in line 99: C8Sr9Dxkbx8 S441 441,7
Error in line 90: 3EIjIBt6C A81 49,2
Error in line 105: 3EIjIBt6C S186 73,9
Error in line 116: 3EIjIBt6C S441 48,2
Error in line 124: OmJemA S186 80,0
Error in line 117: 3EIjIBt6C S946 33,3
Error in line 126: OmJemA A81 63,3
Error in line 132: 3EIjIBt6C S186 22,4
Error in line 125: gzJ16HAvbL S441 71,4
Error in line 137: C8Sr9Dxkbx8 S441 33,78
Error in line 146: 3EIjIBt6C S441 44,6
Error in line 141: C8Sr9Dxkbx8 S441 45,0
Error in line 145: OmJemA S186 50,9
Error in line 156: gzJ16HAvbL S441 26,5
Error in line 155: 3EIjIBt6C S186 196,5
Error in line 164: 3EIjIBt6C S441 84,6
Error in line 170: 3EIjIBt6C A81 71,3
Error in line 175: cqBL S441 28,6
Error in line 192: gzJ16HAvbL S441 58,8
Error in line 167: S441 S186 92,6
Error in line 195: OmJemA S441 17,8
Error in line 203: OmJemA A81 181,8
Error in line 194: S441 A81 87,7
Error in line 213: S441 S441 58,9
Error in line 217: OmJemA S186 77,60
Error in line 208: OmJemA S186 47,8
Error in line 223: OmJemA S946 60,6
Error in line 228: a3LLwI7 S186 86,6
Error in line 230: a3LLwI7 A81 1,7
Error in line 229: 3EIjIBt6C S946 67,9
Error in line 221: gzJ16HAvbL A81 25,3
Error in line 243: OmJemA S946 97,9
